[package]
name = "communication-fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
communication = { path = "../hulk/crates/communication/" }
console-subscriber = "0.2.0"
indicatif = "0.17.7"
rand = "0.8.5"
tokio = "1.33.0"
